# meshcore-chat

./: .gitignore  LICENSE  README.md  check_installation.py  meshchat.py  pyproject.toml
.github/workflows/: ci.yml
mesh/: __init__.py  config.py  constants.py  input_handler.py  meshchat.py  messages.py
test/: test_fullscreen_interface.py  test_meshchat.py
